# models/models.js
@@ -1,6 +1,8 @@
 module.exports = {
+  notifHistory: require("./schema/notifHistory"),
   competition: require("./schema/competition"),
   participant: require("./schema/participant"),
+  notifToken: require("./schema/notifToken"),
   category: require("./schema/category"),
   clubLog: require("./schema/clubLog"),
   invoice: require("./schema/invoice"),
